--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             <h3 class="project">Projects</h3>
             <ol class="li-2">
                 <li class="li2-2">
-                     <a class="li2-3" href="https://lovecamp.allinsol.com/"> https://lovecamp.allinsol.com/</a> 
+                     <a class="li2-3" href="https://andreyz11288.github.io/resume-project/"> Моё резюме на GITHUB</a> 
                      <span class="li2-3-1">........................</span>
                      <span class="li2-3"><b>[</b> HTML5, CSS3 <b>]</b></span>  
                     </li>
                 <li class="li2-2"> 
-                    <a class="li2-3" href="https://cryptohub.goit.ua/"> https://cryptohub.goit.ua/</a>
+                    <a class="li2-3" href="http://video.koma.tv/"> Фильмы на koma</a>
                    <span class="li2-3-1">...........................................</span>
                     <span class="li2-3"> <b>[</b> JavaScript <b>]</b> </span>
                 </li>
