--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                 <li class="li2-2">
                      <a class="li2-3" href="https://andreyz11288.github.io/resume-project/"> Моё резюме на GITHUB</a> 
                      <span class="li2-3-1">........................</span>
-                     <span class="li2-3"><b>[</b> HTML5, CSS3 <b>]</b></span>  
+                     <span class="li2-3"><b>[</b> resume <b>]</b></span>  
                     </li>
                 <li class="li2-2"> 
                     <a class="li2-3" href="http://video.koma.tv/"> Фильмы на koma</a>
                    <span class="li2-3-1">...........................................</span>
-                    <span class="li2-3"> <b>[</b> JavaScript <b>]</b> </span>
+                    <span class="li2-3"> <b>[</b> koma.tv <b>]</b> </span>
                 </li>
                 <li class="li2-2">
                      <a class="li2-3" href="https://kidslike.goit.co.ua/">https://kidslike.goit.co.ua/</a>
